# fortitude

./: .gitignore  .gitmodules  Makefile  README.md
Source/: Main.cpp  Saver.cpp  Saver.h
projects/server/: Makefile  pyproject.toml  ruff.toml
projects/server/src/: __main__.py  app.py  mongo.py
